# plant-track

./: .gitignore  Cargo.toml  Makefile
environment/: docker-compose.yml
environment/localstack/init/ready.d/: setup.sh
src/api/: db.rs  handlers.rs  jwt.rs  lambda.rs  server.rs  types.rs
src/api/db/: base_gateway.rs  dynamo.rs  dynamo_gateway.rs
src/api/db/dynamo/: get_dynamo_client.rs  get_user.rs
src/api/handlers/: create_plant.rs  create_user.rs  login.rs
src/api/jwt/: claims.rs  create_token.rs  validate_token.rs
src/api/lib/: random_id.rs
src/api/types/: login_input.rs  plant.rs  plant_input.rs  user.rs  user_input.rs
